--- a/waybar/style.css
+++ b/waybar/style.css
@@ -66,3 +66,28 @@ window#waybar {
   padding-right: 10px;
 }
 
+/* POWER */
+#custom-power {
+  padding: 6px 12px;
+  margin: 6px 4px;
+  background: rgba(255, 255, 255, 0.06);
+}
+
+
+/* CAPS LOCK */
+#custom-caps-lock {
+  padding: 6px 12px;
+  margin: 6px 4px;
+  background: rgba(255, 255, 255, 0.06);
+}
+
+#custom-caps-lock.caps-on {
+  color: #ff5555;
+  background: rgba(255, 85, 85, 0.15);
+  font-weight: bold;
+}
+
+#custom-caps-lock.caps-off {
+  color: transparent;
+  background: transparent;
+}
