--- a/waybar/style.css
+++ b/waybar/style.css
@@ -91,3 +91,10 @@ window#waybar {
   color: transparent;
   background: transparent;
 }
+
+/* Backlight */
+#backlight {
+  padding: 6px 12px;
+  margin: 6px 4px;
+  background: rgba(255, 255, 255, 0.06);
+}
