--- a/waybar/style.css
+++ b/waybar/style.css
@@ -19,6 +19,11 @@ window#waybar {
 #pulseaudio,
 #network,
 #battery,
+#custom-power,
+#custom-caps-lock,
+#backlight,
+#custom-launcher,
+#custom-cava,
 #tray {
   padding: 3px 8px;
   margin: 3px 2px;
@@ -66,21 +71,8 @@ window#waybar {
   padding-right: 10px;
 }
 
-/* POWER */
-#custom-power {
-  padding: 3px 8px;
-  margin: 3px 2px;
-  background: rgba(255, 255, 255, 0.06);
-}
-
 
 /* CAPS LOCK */
-#custom-caps-lock {
-  padding: 3px 8px;
-  margin: 3px 2px;
-  background: rgba(255, 255, 255, 0.06);
-}
-
 #custom-caps-lock.caps-on {
   color: #ff5555;
   background: rgba(255, 85, 85, 0.15);
@@ -92,14 +84,10 @@ window#waybar {
   background: transparent;
 }
 
-/* Backlight */
-#backlight {
-  padding: 3px 8px;
-  margin: 3px 2px;
-  background: rgba(255, 255, 255, 0.06);
+/*
+#custom-cava {
+  color: #fab387;
+  padding-right: 5px;
+  letter-spacing: -5px;
 }
-#custom-launcher {
-  padding: 3px 8px;
-  margin: 3px 2px;
-  background: rgba(255, 255, 255, 0.06);
-}
+*/
