Update Hypr configuration and scripts for improved functionality and aesthetics
- Changed file manager from Dolphin to Nautilus in programs.conf
- Updated window rules in appearance.conf to redirect KDE Dolphin to Gnome Nautilus
- Replaced Dunst with Swaync in autostart.conf for notification management
- Modified keybindings in binds.conf for better usability, including changing exit key from M to SHIFT + M
- Removed outdated screenshots.sh script and replaced it with Hyprshot commands for screenshot functionality
- Enhanced volume-notifier.sh to improve notification display
- Added new configuration and style files for Swaync notifications
- Updated Waybar configuration to include custom notification widget and adjusted styles accordingly

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -25,6 +25,7 @@ window#waybar {
 #custom-launcher,
 #custom-cava,
 #mpris,
+#custom-notification,
 #tray {
   padding: 3px 8px;
   margin: 3px 2px;
@@ -105,4 +106,7 @@ window#waybar {
 #mpris.spotify {
   color: #1ed760;
   background: rgba(30, 215, 96, 0.15);
+}
+#custom-notification {
+  font-family: "NotoSansMono Nerd Font";
 }
