--- a/ags/style.scss
+++ b/ags/style.scss
@@ -45,3 +45,13 @@ window.Dock {
 .dock-item:active {
   background: #{"alpha(@theme_fg_color, 0.25)"};
 }
+
+window.Floating {
+  background: transparent;
+}
+
+.floating-box {
+  background: #{"alpha(@theme_bg_color, 0.9)"};
+  padding: 20px;
+  border-radius: 16px;
+}
